avfilter/vf_drawbox: use the correct macro to fill rgb plane pointers

Fixes ticket #9924

Reviewed-by: Paul B Mahol <onemda@gmail.com>
Signed-off-by: James Almer <jamrial@gmail.com>